# lyrics

./: .env.example  .gitignore  CMakeLists.txt  LRCLIB_INTEGRATION.md  MUSIC_API_REFACTORING.md  Makefile  QUICK_START.md  README-GUI.md  README.md  TODO.md  check_config.sh  config.toml.example  install-deps.sh  ipc_reader.sh  simple_ipc_reader.sh  test_deadlock_recovery.sh  test_font_size.sh  test_mpc_time.sh  test_player_detection.sh  test_player_priority.sh  test_process_lock.sh  test_scheduler_singleton.sh
cpp-gui/: main.cpp
go-backend/: go.mod  go.sum
go-backend/cmd/lyrics-backend/: main.go
go-backend/internal/app/: app.go
go-backend/internal/config/: config.go
go-backend/internal/i3block/: controller.go  controller_linux.go  controller_windows.go
go-backend/internal/ipc/: server.go
go-backend/internal/lyrics/: lyrics.go
go-backend/internal/pkg/tencent/: client_test.go
go-backend/internal/player/: player.go
go-backend/internal/systray/: systray_linux.go  systray_windows.go
go-backend/internal/tui/: term_unix.go  term_windows.go
go-backend/pkg/ai/: ai.go
go-backend/pkg/ai/gemini/: client.go
go-backend/pkg/ai/openai/: client.go
go-backend/pkg/fileutil/: write.go
go-backend/pkg/lrclib/: client.go
go-backend/pkg/music/: factory.go  interface.go  manager.go  manager_test.go
go-backend/pkg/musicCache/: cache.go
go-backend/pkg/netease/: client.go  client_test.go
go-backend/pkg/qqmusic/: client.go
go-backend/pkg/redis/: client.go
go-backend/tencent/: client.go  const.go
smtc-helper/: Program.cs  smtc-helper.csproj
src/: app.cpp  app.h  config.cpp  config.h  main.cpp  player.h  player_linux.cpp  player_windows.cpp
src/ai/: ai_interface.h  gemini.cpp  gemini.h  openai.cpp  openai.h
src/cache/: cache.cpp  cache.h
src/i3block/: controller.cpp  controller.h
src/lyrics/: lrc_parser.cpp  lrc_parser.h  provider.cpp  provider.h  scheduler.cpp  scheduler.h
src/music/: lrclib.cpp  lrclib.h  lrcmux.cpp  lrcmux.h  music_manager.cpp  music_manager.h  netease.cpp  netease.h
src/tray/: tray.h  tray_linux.cpp  tray_linux.h  tray_windows.cpp
src/ui/: console_tui.cpp  console_tui.h  gtk_window.cpp  gui.h
src/util/: exec.h  http.cpp  http.h  json.cpp  json.h  log.h
